feat: add deployment layer with predict script and model serialization

--- a/notebooks/03_regression_baseline.ipynb
+++ b/notebooks/03_regression_baseline.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "817ec5be",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,9 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import joblib"
    ]
   },
   {
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "42227c63",
    "metadata": {},
    "outputs": [
@@ -183,7 +185,7 @@
        "4            818            57.93             20  41251.89  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "09bf9ffc",
    "metadata": {},
    "outputs": [],
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0238c248",
    "metadata": {},
    "outputs": [],
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0763a785",
    "metadata": {},
    "outputs": [],
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "89977963",
    "metadata": {},
    "outputs": [],
@@ -1902,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2190ad73",
    "metadata": {},
    "outputs": [],
@@ -1921,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d24aed3b",
    "metadata": {},
    "outputs": [
@@ -1966,6 +1968,48 @@
    "metadata": {},
    "source": [
     "<strong>This model serves as a reference point for further improvements.</strong>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1264eb4",
+   "metadata": {},
+   "source": [
+    " ### Final step : **Saving Model for Future Usage**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "692bbe7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved successfully !\n"
+     ]
+    }
+   ],
+   "source": [
+    "joblib.dump(model_pipeline, \"../models/revenue_prediction_pipeline.pkl\")\n",
+    "print(\"Model saved successfully !\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306fb76f",
+   "metadata": {},
+   "source": [
+    "Saving the pipeline is important to ensure that : \n",
+    "<ul>\n",
+    "<li>Preprocessing</li>\n",
+    "<li>Encoding</li>\n",
+    "<li>Scaling</li>\n",
+    "<li>Model</li>\n",
+    "</ul>\n",
+    "are applied <strong>exactly</strong> the same way during prediction."
    ]
   }
  ],
